# AirMic

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: mode_manager.c  mode_manager.h
main/app/airmicprotocol/: airmicprotocol.c  airmicprotocol.h
main/app/ble_bridge/: ble_bridge.c  ble_bridge.h
main/app/fc_link/: fc_link.c  fc_link.h
main/app/http_server/: http_server.c  http_server.h
main/app/recorder/: recorder.c  recorder.c.bk  recorder.h
main/app/rid/: rid.c  rid.h
main/app/usb_msc/: usb_msc.c  usb_msc.h
main/ble/: ble_nus.c  ble_nus.h
main/boards/: bsp.h  martlet_airmic_rev0.h  martlet_airmic_rev1.h  martlet_airmic_v1.h
main/drivers/button/: button.c  button.h
main/drivers/led/: led.c  led.h
main/drivers/mic/: mic.c  mic.h  mic_i2s.c  mic_pdm.c
main/drivers/rgb_led/: rgb_led.c  rgb_led.h
main/drivers/sdcard/: sdcard.c  sdcard.h
main/wifi/: wifi.c  wifi.h
